SQL server refactored for coding test cases.